Fix cover image issue on Firefox

--- a/src/styles/_images.scss
+++ b/src/styles/_images.scss
@@ -3,6 +3,10 @@
     height: auto;
     min-height: 100%;
     aspect-ratio: 2.4/2;
+
+    @supports (-moz-appearance:none) {
+        height: 100%;
+    }
 }
 
 .img-fluid:hover {
@@ -36,5 +40,5 @@
 /* Photoswipe styles */
 
 .pswp__bg {
-    opacity: 1!important;
+    opacity: 1 !important;
 }
